--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-1.10MB/s(Youtube:不良林), server: 157.230.41.220, port: 29596, type: ss, cipher: aes-256-cfb, password: e6c1cf51375c407d92d110881a825acb}
-  - {name: 🇨🇳 中国-612.6KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 台湾-2.04MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-565.5KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇰🇷 韩国-8.19MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.00MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 🇺🇸 美国-2.74MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
-  - {name: 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 未知国家-2.11MB/s(Youtube:不良林), server: v5.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v5.ssrsub.com}}
+  - {name: 🇨🇳 台湾-2.28MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-5.14MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇫🇷 法国-2.80MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-191.2KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇯🇵 日本-10.20MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.04MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: 185.183.84.60, port: 3306, type: vmess, uuid: 9b309fbe-4a98-4b15-d853-878d89b18a13, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.91MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-612.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-565.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-612.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-565.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-612.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-565.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-2.04MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-612.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-565.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-612.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-565.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-612.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-565.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-612.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-565.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
