--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,117 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-248.6KB/s(Youtube:不良林), server: 213.183.53.177, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
-  - {name: 🇺🇸 美国-4.85MB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.64MB/s(Youtube:不良林), server: iesei1ei.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: iesei1ei.com}}
-  - {name: 🇺🇸 美国-486.3KB/s(Youtube:不良林), server: 185.183.84.60, port: 3306, type: vmess, uuid: 9b309fbe-4a98-4b15-d853-878d89b18a13, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.90MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.39MB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
-  - {name: 🇯🇵 日本-14.22MB/s(Youtube:不良林), server: 54.238.232.202, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇺🇸 美国-4.59MB/s(Youtube:不良林), server: 205.185.124.145, port: 85, type: vmess, uuid: 887a1c68-4665-3e74-a911-4e2be6f2e82f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: 205.185.124.145}}
-  - {name: 🇺🇸 美国-3.73MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-9.15MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-9.68MB/s(Youtube:不良林), server: 54.238.232.202, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 台湾-2.55MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 乌克兰-921.3KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.31MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇬🇧 英国-306.5KB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s3.upyun.online, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.53MB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
+  - {name: 🇨🇳 中国-455.4KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-248.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-486.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.68MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
+      - 乌克兰-921.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-306.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-248.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-486.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.68MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
+      - 乌克兰-921.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-306.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-248.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-486.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.68MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
+      - 乌克兰-921.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-306.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.53MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-248.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-486.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.68MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
+      - 乌克兰-921.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-306.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-248.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-486.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.68MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
+      - 乌克兰-921.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-306.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-248.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-486.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.68MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
+      - 乌克兰-921.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-306.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-248.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-486.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.68MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
+      - 乌克兰-921.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-306.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
