--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇯🇵 日本-9.15MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.93MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 乌克兰-579.3KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
   - {name: 🇯🇵 日本-9.68MB/s(Youtube:不良林), server: 54.238.232.202, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇨🇳 台湾-2.55MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 乌克兰-921.3KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-3.31MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
   - {name: 🇬🇧 英国-306.5KB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s3.upyun.online, skip-cert-verify: true}
   - {name: 🇭🇰 香港-2.53MB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
   - {name: 🇨🇳 中国-455.4KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-467.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇷🇺 俄罗斯联邦-317.2KB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇯🇵 日本-9.15MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
+      - 乌克兰-579.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-9.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
-      - 乌克兰-921.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.31MB/s(Youtube:不良林)
       - 🇬🇧 英国-306.5KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-317.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇯🇵 日本-9.15MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
+      - 乌克兰-579.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-9.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
-      - 乌克兰-921.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.31MB/s(Youtube:不良林)
       - 🇬🇧 英国-306.5KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-317.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,21 +53,19 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇯🇵 日本-9.15MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
+      - 乌克兰-579.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-9.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
-      - 乌克兰-921.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.31MB/s(Youtube:不良林)
       - 🇬🇧 英国-306.5KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-317.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.31MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.53MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -76,30 +74,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇯🇵 日本-9.15MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
+      - 乌克兰-579.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-9.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
-      - 乌克兰-921.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.31MB/s(Youtube:不良林)
       - 🇬🇧 英国-306.5KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-317.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇯🇵 日本-9.15MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
+      - 乌克兰-579.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-9.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
-      - 乌克兰-921.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.31MB/s(Youtube:不良林)
       - 🇬🇧 英国-306.5KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-317.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -107,15 +105,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇯🇵 日本-9.15MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
+      - 乌克兰-579.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-9.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
-      - 乌克兰-921.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.31MB/s(Youtube:不良林)
       - 🇬🇧 英国-306.5KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-317.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -132,15 +130,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇯🇵 日本-9.15MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
+      - 乌克兰-579.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-9.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
-      - 乌克兰-921.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.31MB/s(Youtube:不良林)
       - 🇬🇧 英国-306.5KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-317.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
